--- a/org-from-code.cabal
+++ b/org-from-code.cabal
@@ -4,12 +4,12 @@ version:            0.1.0.0
 -- synopsis:
 -- description:
 license:            BSD-3-Clause
-license-file:       LICENSE
+-- license-file:
 author:             Jeffrey Benjamin Brown
 maintainer:         jeffbrown.the@gmail.com
 -- copyright:
 build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+-- extra-doc-files:
 -- extra-source-files:
 
 common warnings
@@ -19,6 +19,7 @@ executable org-from-code
     import:           warnings
     main-is:          Main.hs
     other-modules:
+      Elisp,
       Util,
       Rust
     -- other-extensions:
